# AternosDiscord

./: .replit  README.md  pyproject.toml
aternosbot/: __main__.py
aternosbot/aternos_bot/: aternos_class.py
src/: main.py
src/aternos/: __init__.py
src/discord/: __init__.py  discord_class.py
src/discord_bot/: discord_class.py
