[tool.poetry]
name = "aternos-discord-bot"
version = "0.0.1"
description = "Create a Discord Bot to manage Aternos Servers"
authors = ["Accoustium"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
discord = "^1.7.3"
py-aternos = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cahche"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C3', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"