[tool.poetry]
name = "aternos-discord-bot"
version = "0.0.1"
description = "Create a Discord Bot to manage Aternos Servers"
authors = ["Accoustium"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
discord = "^2.3.2"
py-aternos = "^3.0.74"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cahche"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C3', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"